# vector_search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  load-extensions.sh  manage.py  pg-Dockerfile  postgres_extensions.txt  pylintrc  pyproject.toml  start_app.sh
.devcontainer/: devcontainer.json  docker-compose.yml
administration/: admin.py  consumers.py  exceptions.py  forms.py  routing.py  tasks.py  urls.py  utils.py
administration/api/: enums.py
administration/api/serializers/: article.py
administration/api/views/: article.py  milvus_collection.py  search.py
administration/factories/: __init__.py  article.py
administration/helpers/: milvus_service.py
administration/management/commands/: populate_article_chunks.py
administration/migrations/: 0001_initial.py  0002_article_processing_info.py
administration/models/: __init__.py  article.py  timestamp.py  user.py
administration/templates/administration/: add_article.html  article_list.html  base.html  confirm_delete.html  edit_article.html  fetch_example_vectors.html  navbar.html  search.html
administration/tests/commands/: test_populate_article_chunks.py
administration/tests/helpers/: test_milvus_service.py
administration/tests/views/: test_article.py  test_search.py
vidoso/: .env  asgi.py  celery.py  env_example  settings.py  urls.py  wsgi.py
